<resources>
    <string name="app_name">Road\nto\nMerdeka</string>
    <string name="desc">“Merdeka” is a Malay word referring to Malaysia Independence Day, a day of immense pride and historical significance. Decades of conflict, discussions, and sacrifices by Malaysian leaders and warriors characterized the countrys path to independence. The journey towards 31 August 1957 is a history that is written as a significant event. By studying this important period, one feels an appreciation to Malaysian roots and also the solidarity with the hardships and victories that led to the formation of the nation.</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="username_text">Username</string>
    <string name="login_field">Enter username or email</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="confirmpass_text">Confirm Password</string>
    <string name="username_field">Enter your username</string>
    <string name="email_field">Enter your email</string>
    <string name="password_field">Enter your password</string>
    <string name="confirmpass_field">Confirm Password</string>
    <string name="signup_text">Sign Up</string>
    <string name="signin_text">Sign In</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="continue_button">Continue reading</string>
    <string name="signin_redirect">Already have an account? Sign In</string>
    <string name="signup_redirect">Dont have an account? Sign Up</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="chapter_num">Chapter</string>
    <string name="quizzes_num">Quiz</string>
    <string name="quizzes_headline">Quizzes</string>
    <string name="chapters_headline">Quizzes</string>
    <string name="chapter_image_desc">Image representing the chapter</string>
    <string name="quotes">History to independence</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_title">No Title</string>
    <string name="no_content">No Content</string>
    <string name="play_audio">Play Audio</string>
</resources>