<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landingpage"
    tools:context=".LandingPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="197dp"
        android:layout_below="@id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        android:src="@drawable/logo2" />

    <!-- Sign Up Button (Top-Right) -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:text="@string/signup_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/caprasimo_regular" />

    <!-- TextView above the Sign In Button -->
    <TextView
        android:id="@+id/imageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quotes"
        android:textColor="@color/blue2"
        android:fontFamily="@font/timeless_memories_regular"
        android:textSize="16sp"
        android:layout_below="@id/imageView"
        android:layout_marginTop="0dp"
        android:gravity="center" />



    <!-- Login Button (Bottom-Centered) -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_bordered_transparent"
        android:fontFamily="@font/caprasimo_regular"
        android:gravity="center"
        android:text="@string/signin_text"
        android:textSize="20sp" />

</RelativeLayout>
